Fix mobile table alignment by adding media query

--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,15 @@ h1 {
     text-align: center;
 }
 
+.hide-winner {
+    display: none;
+}
+
+.show-winner {
+    display: block;
+    transform: translateY()
+}
+
 .box {
     align-items: center;
     display: flex;
@@ -69,6 +78,12 @@ table {
     z-index: 1000;
 }
 
+@media (max-width: 768px) {
+    table {
+        align-self: flex-start;
+    }
+}
+
 .game-box {
     align-items: center;
     display: grid;
@@ -100,6 +115,12 @@ table {
     justify-self: start;
 }
 
+@keyframes vertical {
+    100% {
+        height: 350px;
+    }
+}
+
 .horiz-color {
     height: 0;
     width: 1px;
@@ -125,12 +146,6 @@ table {
 @keyframes horizontal {
     100% {
         width: 350px;
-    }
-}
-
-@keyframes vertical {
-    100% {
-        height: 350px;
     }
 }
 
